feat: Fixes do sonarcloud